# RAG-Chatbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/v1/: router.py
app/core/: config.py  exceptions.py  logging.py  responses.py
app/db/: base.py  session.py
app/middleware/: rate_limit.py  request_id.py
app/models/: __init__.py
app/modules/auth/: dependencies.py  models.py  repository.py  router.py  schemas.py  security.py  service.py
app/modules/documents/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/modules/embeddings/: __init__.py  provider.py
app/modules/health/: router.py  schemas.py
app/modules/ingestion/: chunking.py  extraction.py
app/modules/retrieval/: __init__.py  dependencies.py  repository.py  router.py  schemas.py  service.py
app/modules/storage/: dependencies.py  security.py  service.py
app/modules/workspaces/: __init__.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
app/tests/: conftest.py
app/tests/integration/: test_auth_api.py  test_document_api.py  test_health_api.py  test_retrieval_api.py  test_workspace_api.py
app/tests/unit/: test_auth_dependencies.py  test_auth_migration.py  test_auth_models.py  test_auth_repository.py  test_auth_schemas.py  test_auth_security.py  test_auth_service.py  test_config.py  test_document_dependencies.py  test_document_migration.py  test_document_models.py  test_document_repository.py  test_document_schemas.py  test_document_service.py  test_embedding_migration.py  test_embedding_provider.py  test_ingestion_chunking.py  test_ingestion_extraction.py  test_ingestion_migration.py  test_request_id_sanitization.py  test_responses.py  test_retrieval_repository.py  test_retrieval_schemas.py  test_retrieval_service.py  test_storage_dependencies.py  test_storage_security.py  test_storage_service.py  test_workspace_dependencies.py  test_workspace_migration.py  (+4 more)
migrations/: README  env.py
migrations/versions/: 0001_create_auth_tables.py  0002_create_workspace_tables.py  0003_workspace_role_check.py  0004_create_documents_table.py  0005_create_document_chunks.py  0006_add_chunk_embeddings.py
