[project]
name = "knowbase-ai-backend"
version = "0.1.0"
description = "Secure multi-tenant RAG knowledge base backend."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "argon2-cffi>=23.1,<26.0",
    "asyncpg>=0.29,<1.0",
    "email-validator>=2.2,<3.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.4,<3.0",
    "pgvector>=0.3,<1.0",
    "pypdf>=5.0,<7.0",
    "PyJWT>=2.9,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "python-json-logger>=2.0,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.6,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["migrations*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]
